--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             </div>
             <h2 class="welcome-modal-title">به پروکسی یاب خوش آمدید!</h2>
             <p class="welcome-modal-text">نسل جدید پروکسی های امن و پرسرعت تلگرام</p>
-            <a href="https://t.me/asrnovin_ir" target="_blank" rel="noopener noreferrer" class="welcome-modal-link">
+            <a href="https://t.me/Goldsignal2021" target="_blank" rel="noopener noreferrer" class="welcome-modal-link">
                 <i class="fa-brands fa-telegram ml-2"></i>
                 عضویت در کانال تلگرام
             </a>
@@ -361,7 +361,7 @@
                         <h4 class="font-bold text-lg text-white">به کانال تلگرام ما بپیوندید</h4>
                     </div>
                     <p>برای دریافت آخرین پروکسی‌ها و اطلاع از بروزرسانی‌ها، ما را دنبال کنید.</p>
-                    <a href="https://t.me/asrnovin_ir" target="_blank" rel="noopener noreferrer" 
+                    <a href="https://t.me/Goldsignal2021" target="_blank" rel="noopener noreferrer" 
                        class="group inline-block mt-2 bg-sky-500/10 hover:bg-sky-500/20 text-sky-400 font-semibold py-2 px-5 border border-sky-500/20 rounded-lg transition-all duration-300">
                         @asrnovin_ir <i class="fa-solid fa-arrow-up-right-from-square text-xs ml-1 opacity-70 group-hover:opacity-100 transition-opacity"></i>
                     </a>
@@ -384,7 +384,7 @@
             </div>
             <div class="mt-8 pt-6 border-t border-gray-800/50 text-sm">
                 <p class="flex items-center justify-center gap-x-2 flex-wrap">
-                    <span>&copy; 1403 پروکسی یاب تلگرام. تمامی حقوق محفوظ است.</span>
+                    <span>&copy; 1404 پروکسی یاب تلگرام. تمامی حقوق محفوظ است.</span>
                     <span class="bg-sky-500/10 text-sky-400 text-xs font-semibold px-2.5 py-0.5 rounded-full border border-sky-500/20">نسخه 1.1</span>
                 </p>
             </div>
