--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                         <h4 class="font-bold text-lg text-white">طراح و توسعه دهنده</h4>
                     </div>
                     <p>ساخته شده با <i class="fa-solid fa-heart text-red-500"></i> برای دسترسی آزاد</p>
-                     <a href="https://t.me/asrnovin_ir" target="_blank" rel="noopener noreferrer"
+                     <a href="https://t.me/Goldsignal2021" target="_blank" rel="noopener noreferrer"
                        class="group inline-block mt-2 bg-green-500/10 hover:bg-green-500/20 text-green-400 font-semibold py-2 px-5 border border-green-500/20 rounded-lg transition-all duration-300">
                         @Goldsignal2021
                         <i class="fa-solid fa-arrow-up-right-from-square text-xs ml-1 opacity-70 group-hover:opacity-100 transition-opacity"></i>
